<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ucsc.hci.rankit.MenuPageActivity">

    <TextView android:text="@string/menu_head_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    <Button
        android:id="@+id/movies_button"
        android:text="@string/movies_button"
        android:onClick="moviesCaller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/books_button"
        android:text="@string/books_button"
        android:onClick="booksCaller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movies_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/music_button"
        android:text="@string/music_button"
        android:onClick="musicCaller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/books_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/images_button"
        android:text="@string/images_button"
        android:onClick="imagesCaller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/music_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    </RelativeLayout>

</RelativeLayout>
