<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ucsc.hci.rankit.UserStatistics">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue1"
        android:text="@string/user_id"
        android:id="@+id/userid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_bio"
        android:textColor="@color/purple1"
        android:id="@+id/userbio"
        android:layout_below="@+id/userid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:paddingRight="128dp"
        android:paddingLeft="16dp" />

    <ImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/roar"
        android:id="@+id/usericon"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="User Statistics"
        android:textColor="@color/green1"
        android:id="@+id/statistics"
        android:paddingLeft="16dp"
        android:layout_below="@+id/userbio"
        android:layout_marginTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageStatistics"
        android:src="@drawable/statistics"
        android:paddingLeft="16dp"
        android:layout_below="@+id/statistics"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Recent Activity"
        android:textColor="@color/red1"
        android:id="@+id/Activity"
        android:paddingLeft="16dp"
        android:layout_below="@+id/imageStatistics"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_activity"
        android:textColor="@color/red1"
        android:id="@+id/userActivity"
        android:paddingLeft="16dp"
        android:layout_below="@+id/Activity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>
