

<!--

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/welcome_text"
        android:text="@string/description_front" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="10dp"/>


    <EditText
        android:id="@+id/login_password"
        android:password="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_password"/>

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="fill_parent"
        android:layout_below="@+id/sign_in_button"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/next_button"
        android:text="@string/next_button"
        android:onClick="menuActivityCaller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter_login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>

-->




<RelativeLayout
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
android:id = "@+id/base_layout"
android:layout_width="match_parent"
android:layout_height="match_parent">


<RelativeLayout
    android:id="@+id/top_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/rankit_logo_v2"
        />


</RelativeLayout>


<RelativeLayout
    android:id="@+id/button_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/top_layout"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_centerHorizontal="true"
    >


    <TextView
        android:id="@+id/user_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/rankit_desc"
        android:textStyle="italic"
        android:textColor="@color/darkblue"
        android:textSize="@dimen/abc_text_size_medium_material"/>





</RelativeLayout>




    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_layout"
        android:layout_marginTop="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        >




        <EditText
            android:id="@+id/login_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="@dimen/abc_action_bar_icon_vertical_padding_material"/>


        <EditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/abc_action_bar_icon_vertical_padding_material"
            android:layout_below="@+id/login_username"/>




    </RelativeLayout>





    <RelativeLayout
        android:id="@+id/submit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        >




        <Button
            android:id="@+id/skip_login"
            android:text="@string/skip_login"
            android:onClick="menuActivityCaller"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:background="@color/green2"/>



        <Button
            android:id="@+id/login_button"
            android:text="@string/login"
            android:onClick="menuActivityCaller"
            android:textStyle="italic"
            android:background="@drawable/button_press"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/skip_login"
            android:layout_toRightOf="@id/skip_login"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            />



    </RelativeLayout>




    <!-- For all Screens -->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/abc_action_bar_default_height_material"
    android:layout_alignParentBottom="true"
    android:background="@color/bottom_bar_grey">




    <ImageView
        android:id="@+id/user_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_action_person"
        android:onClick="menuActivityCaller"/>


    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_action_settings"
        android:onClick="menuActivityCaller"/>

</RelativeLayout>









</RelativeLayout> <!-- End of base -->


